# regulatory-alerts

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_KNOWLEDGE.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_notification_channels.py  003_add_users.py  004_add_stripe_billing.py  005_add_subscribed_topics.py  006_add_notification_retry.py  007_add_beta_columns.py  008_add_admin_column.py  009_add_alert_reviews.py
scripts/: init_feeds.py
src/regulatory_alerts/: admin.py  alerting.py  api.py  auth.py  billing.py  cli.py  config.py  csrf.py  dashboard.py  observability.py  rate_limit.py  validation.py
src/regulatory_alerts/core/: ai_summarizer.py  cftc_scraper.py  document_processor.py  feed_fetcher.py  notifier.py  scheduler.py
src/regulatory_alerts/database/: session.py
src/regulatory_alerts/models/: __init__.py  alert.py  document.py  notification.py  review.py  stripe_event.py  user.py
src/regulatory_alerts/static/js/: app.js
src/regulatory_alerts/templates/: base.html
tests/: conftest.py  test_admin.py  test_ai_summarizer.py  test_alerting.py  test_api.py  test_auth.py  test_beta_sprint.py  test_billing.py  test_bugfixes.py  test_dashboard.py  test_document_processor.py  test_hardening.py  test_notifier.py  test_observability.py  test_password_reset.py  test_phase2.py  test_prometheus.py  test_security.py  test_sprint11.py  test_sprint8_notifications.py  test_topics.py
(+32 files in other folders)
